set flex shrink to prevent radio and checkbox from squashing if parent container width is narrow

--- a/src/scss/pardot-forms.scss
+++ b/src/scss/pardot-forms.scss
@@ -110,6 +110,7 @@ input[type='checkbox'] {
       margin-right: $spacing-2;
       margin-top: $spacing-2;
       border: 1px solid currentColor;
+      flex-shrink: 0;
     }
   }
 
@@ -145,6 +146,7 @@ input[type='radio'] {
       margin-top: $spacing-2;
       border: 1px solid currentColor;
       border-radius: 100%;
+      flex-shrink: 0;
     }
   }
 
